latexgrammar/LaTeXParser.py
# Generated from LaTeXParser.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class LaTeXParser ( Parser ):

    grammarFileName = "LaTeXParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'!'", "'{'", 
                     "'}'", "<INVALID>", "<INVALID>", "'&'", "'\\\\'" ]

    symbolicNames = [ "<INVALID>", "STR", "SPACE", "MACRO", "COMMENT", "ENV", 
                      "NEWLINE", "HYPHEN", "NUMBER", "PUNC", "VERB_BEGIN", 
                      "MATH_BEGIN", "ENV_BEGIN", "ENV_END", "VERB_CHAR", 
                      "VERB_END", "ARG_PRESPACE", "ARG_BEGIN", "ARG_END", 
                      "ARG_NEWLINEMACRO", "MATH_END", "MATH_NEWLINE", "MATH_SPACE", 
                      "MATH_ENV_BEGIN", "MATH_ENV_END", "MATH_LEFT", "MATH_RIGHT", 
                      "MATH_MACRO", "MATH_VARIABLE", "MATH_SCRIPT", "MATH_BINARY_OPERATOR", 
                      "MATH_UNARY_OPERATOR", "MATH_ARG_BEGIN", "MATH_ARG_END", 
                      "MATH_SUBEXPR_BEGIN", "MATH_SUBEXPR_END", "MATH_AMPERSAND", 
                      "NEWLINEMACRO" ]

    RULE_comment = 0
    RULE_verbatim = 1
    RULE_math = 2
    RULE_macro = 3
    RULE_argument = 4
    RULE_env = 5
    RULE_mathenv = 6
    RULE_mathmacro = 7
    RULE_mathscript = 8
    RULE_mathcontent = 9
    RULE_content = 10

    ruleNames =  [ "comment", "verbatim", "math", "macro", "argument", "env", 
                   "mathenv", "mathmacro", "mathscript", "mathcontent", 
                   "content" ]

    EOF = Token.EOF
    STR=1
    SPACE=2
    MACRO=3
    COMMENT=4
    ENV=5
    NEWLINE=6
    HYPHEN=7
    NUMBER=8
    PUNC=9
    VERB_BEGIN=10
    MATH_BEGIN=11
    ENV_BEGIN=12
    ENV_END=13
    VERB_CHAR=14
    VERB_END=15
    ARG_PRESPACE=16
    ARG_BEGIN=17
    ARG_END=18
    ARG_NEWLINEMACRO=19
    MATH_END=20
    MATH_NEWLINE=21
    MATH_SPACE=22
    MATH_ENV_BEGIN=23
    MATH_ENV_END=24
    MATH_LEFT=25
    MATH_RIGHT=26
    MATH_MACRO=27
    MATH_VARIABLE=28
    MATH_SCRIPT=29
    MATH_BINARY_OPERATOR=30
    MATH_UNARY_OPERATOR=31
    MATH_ARG_BEGIN=32
    MATH_ARG_END=33
    MATH_SUBEXPR_BEGIN=34
    MATH_SUBEXPR_END=35
    MATH_AMPERSAND=36
    NEWLINEMACRO=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class CommentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self):
            return self.getToken(LaTeXParser.COMMENT, 0)

        def getRuleIndex(self):
            return LaTeXParser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComment" ):
                return visitor.visitComment(self)
            else:
                return visitor.visitChildren(self)




    def comment(self):

        localctx = LaTeXParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_comment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.match(LaTeXParser.COMMENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VerbatimContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERB_BEGIN(self):
            return self.getToken(LaTeXParser.VERB_BEGIN, 0)

        def VERB_END(self):
            return self.getToken(LaTeXParser.VERB_END, 0)

        def VERB_CHAR(self, i:int=None):
            if i is None:
                return self.getTokens(LaTeXParser.VERB_CHAR)
            else:
                return self.getToken(LaTeXParser.VERB_CHAR, i)

        def getRuleIndex(self):
            return LaTeXParser.RULE_verbatim

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVerbatim" ):
                listener.enterVerbatim(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVerbatim" ):
                listener.exitVerbatim(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVerbatim" ):
                return visitor.visitVerbatim(self)
            else:
                return visitor.visitChildren(self)




    def verbatim(self):

        localctx = LaTeXParser.VerbatimContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_verbatim)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(LaTeXParser.VERB_BEGIN)
            self.state = 28
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LaTeXParser.VERB_CHAR:
                self.state = 25
                self.match(LaTeXParser.VERB_CHAR)
                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 31
            self.match(LaTeXParser.VERB_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MathContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MATH_BEGIN(self):
            return self.getToken(LaTeXParser.MATH_BEGIN, 0)

        def MATH_END(self):
            return self.getToken(LaTeXParser.MATH_END, 0)

        def mathcontent(self):
            return self.getTypedRuleContext(LaTeXParser.MathcontentContext,0)


        def getRuleIndex(self):
            return LaTeXParser.RULE_math

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMath" ):
                listener.enterMath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMath" ):
                listener.exitMath(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMath" ):
                return visitor.visitMath(self)
            else:
                return visitor.visitChildren(self)




    def math(self):

        localctx = LaTeXParser.MathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_math)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.match(LaTeXParser.MATH_BEGIN)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LaTeXParser.MACRO) | (1 << LaTeXParser.COMMENT) | (1 << LaTeXParser.PUNC) | (1 << LaTeXParser.MATH_ENV_BEGIN) | (1 << LaTeXParser.MATH_LEFT) | (1 << LaTeXParser.MATH_MACRO) | (1 << LaTeXParser.MATH_VARIABLE) | (1 << LaTeXParser.MATH_SCRIPT) | (1 << LaTeXParser.MATH_BINARY_OPERATOR) | (1 << LaTeXParser.MATH_UNARY_OPERATOR) | (1 << LaTeXParser.MATH_SUBEXPR_BEGIN) | (1 << LaTeXParser.MATH_AMPERSAND))) != 0):
                self.state = 34
                self.mathcontent()


            self.state = 37
            self.match(LaTeXParser.MATH_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MacroContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MACRO(self):
            return self.getToken(LaTeXParser.MACRO, 0)

        def argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LaTeXParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(LaTeXParser.ArgumentContext,i)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(LaTeXParser.SPACE)
            else:
                return self.getToken(LaTeXParser.SPACE, i)

        def getRuleIndex(self):
            return LaTeXParser.RULE_macro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMacro" ):
                listener.enterMacro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMacro" ):
                listener.exitMacro(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMacro" ):
                return visitor.visitMacro(self)
            else:
                return visitor.visitChildren(self)




    def macro(self):

        localctx = LaTeXParser.MacroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_macro)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(LaTeXParser.MACRO)
            self.state = 46
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 41
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==LaTeXParser.SPACE:
                        self.state = 40
                        self.match(LaTeXParser.SPACE)


                    self.state = 43
                    self.argument() 
                self.state = 48
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARG_BEGIN(self):
            return self.getToken(LaTeXParser.ARG_BEGIN, 0)

        def ARG_END(self):
            return self.getToken(LaTeXParser.ARG_END, 0)

        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LaTeXParser.CommentContext)
            else:
                return self.getTypedRuleContext(LaTeXParser.CommentContext,i)


        def macro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LaTeXParser.MacroContext)
            else:
                return self.getTypedRuleContext(LaTeXParser.MacroContext,i)


        def math(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LaTeXParser.MathContext)
            else:
                return self.getTypedRuleContext(LaTeXParser.MathContext,i)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(LaTeXParser.SPACE)
            else:
                return self.getToken(LaTeXParser.SPACE, i)

        def HYPHEN(self, i:int=None):
            if i is None:
                return self.getTokens(LaTeXParser.HYPHEN)
            else:
                return self.getToken(LaTeXParser.HYPHEN, i)

        def STR(self, i:int=None):
            if i is None:
                return self.getTokens(LaTeXParser.STR)
            else:
                return self.getToken(LaTeXParser.STR, i)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(LaTeXParser.NUMBER)
            else:
                return self.getToken(LaTeXParser.NUMBER, i)

        def PUNC(self, i:int=None):
            if i is None:
                return self.getTokens(LaTeXParser.PUNC)
            else:
                return self.getToken(LaTeXParser.PUNC, i)

        def getRuleIndex(self):
            return LaTeXParser.RULE_argument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgument" ):
                listener.enterArgument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgument" ):
                listener.exitArgument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgument" ):
                return visitor.visitArgument(self)
            else:
                return visitor.visitChildren(self)




    def argument(self):

        localctx = LaTeXParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_argument)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(LaTeXParser.ARG_BEGIN)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LaTeXParser.STR) | (1 << LaTeXParser.SPACE) | (1 << LaTeXParser.MACRO) | (1 << LaTeXParser.COMMENT) | (1 << LaTeXParser.HYPHEN) | (1 << LaTeXParser.NUMBER) | (1 << LaTeXParser.PUNC) | (1 << LaTeXParser.MATH_BEGIN))) != 0):
                self.state = 58
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [LaTeXParser.COMMENT]:
                    self.state = 50
                    self.comment()
                    pass
                elif token in [LaTeXParser.MACRO]:
                    self.state = 51
                    self.macro()
                    pass
                elif token in [LaTeXParser.MATH_BEGIN]:
                    self.state = 52
                    self.math()
                    pass
                elif token in [LaTeXParser.SPACE]:
                    self.state = 53
                    self.match(LaTeXParser.SPACE)
                    pass
                elif token in [LaTeXParser.HYPHEN]:
                    self.state = 54
                    self.match(LaTeXParser.HYPHEN)
                    pass
                elif token in [LaTeXParser.STR]:
                    self.state = 55
                    self.match(LaTeXParser.STR)
                    pass
                elif token in [LaTeXParser.NUMBER]:
                    self.state = 56
                    self.match(LaTeXParser.NUMBER)
                    pass
                elif token in [LaTeXParser.PUNC]:
                    self.state = 57
                    self.match(LaTeXParser.PUNC)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self.match(LaTeXParser.ARG_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EnvContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENV_BEGIN(self):
            return self.getToken(LaTeXParser.ENV_BEGIN, 0)

        def ENV_END(self):
            return self.getToken(LaTeXParser.ENV_END, 0)

        def argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LaTeXParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(LaTeXParser.ArgumentContext,i)


        def content(self):
            return self.getTypedRuleContext(LaTeXParser.ContentContext,0)


        def getRuleIndex(self):
            return LaTeXParser.RULE_env

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnv" ):
                listener.enterEnv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnv" ):
                listener.exitEnv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnv" ):
                return visitor.visitEnv(self)
            else:
                return visitor.visitChildren(self)




    def env(self):

        localctx = LaTeXParser.EnvContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_env)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(LaTeXParser.ENV_BEGIN)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LaTeXParser.ARG_BEGIN:
                self.state = 66
                self.argument()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LaTeXParser.STR) | (1 << LaTeXParser.SPACE) | (1 << LaTeXParser.MACRO) | (1 << LaTeXParser.COMMENT) | (1 << LaTeXParser.NEWLINE) | (1 << LaTeXParser.HYPHEN) | (1 << LaTeXParser.NUMBER) | (1 << LaTeXParser.PUNC) | (1 << LaTeXParser.VERB_BEGIN) | (1 << LaTeXParser.MATH_BEGIN) | (1 << LaTeXParser.ENV_BEGIN))) != 0):
                self.state = 72
                self.content()


            self.state = 75
            self.match(LaTeXParser.ENV_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MathenvContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MATH_ENV_BEGIN(self):
            return self.getToken(LaTeXParser.MATH_ENV_BEGIN, 0)

        def MATH_ENV_END(self):
            return self.getToken(LaTeXParser.MATH_ENV_END, 0)

        def argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LaTeXParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(LaTeXParser.ArgumentContext,i)


        def mathcontent(self):
            return self.getTypedRuleContext(LaTeXParser.MathcontentContext,0)


        def getRuleIndex(self):
            return LaTeXParser.RULE_mathenv

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMathenv" ):
                listener.enterMathenv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMathenv" ):
                listener.exitMathenv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMathenv" ):
                return visitor.visitMathenv(self)
            else:
                return visitor.visitChildren(self)




    def mathenv(self):

        localctx = LaTeXParser.MathenvContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mathenv)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(LaTeXParser.MATH_ENV_BEGIN)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LaTeXParser.ARG_BEGIN:
                self.state = 78
                self.argument()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LaTeXParser.MACRO) | (1 << LaTeXParser.COMMENT) | (1 << LaTeXParser.PUNC) | (1 << LaTeXParser.MATH_ENV_BEGIN) | (1 << LaTeXParser.MATH_LEFT) | (1 << LaTeXParser.MATH_MACRO) | (1 << LaTeXParser.MATH_VARIABLE) | (1 << LaTeXParser.MATH_SCRIPT) | (1 << LaTeXParser.MATH_BINARY_OPERATOR) | (1 << LaTeXParser.MATH_UNARY_OPERATOR) | (1 << LaTeXParser.MATH_SUBEXPR_BEGIN) | (1 << LaTeXParser.MATH_AMPERSAND))) != 0):
                self.state = 84
                self.mathcontent()


            self.state = 87
            self.match(LaTeXParser.MATH_ENV_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MathmacroContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MATH_MACRO(self):
            return self.getToken(LaTeXParser.MATH_MACRO, 0)

        def MATH_ARG_BEGIN(self, i:int=None):
            if i is None:
                return self.getTokens(LaTeXParser.MATH_ARG_BEGIN)
            else:
                return self.getToken(LaTeXParser.MATH_ARG_BEGIN, i)

        def MATH_ARG_END(self, i:int=None):
            if i is None:
                return self.getTokens(LaTeXParser.MATH_ARG_END)
            else:
                return self.getToken(LaTeXParser.MATH_ARG_END, i)

        def mathcontent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LaTeXParser.MathcontentContext)
            else:
                return self.getTypedRuleContext(LaTeXParser.MathcontentContext,i)


        def getRuleIndex(self):
            return LaTeXParser.RULE_mathmacro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMathmacro" ):
                listener.enterMathmacro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMathmacro" ):
                listener.exitMathmacro(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMathmacro" ):
                return visitor.visitMathmacro(self)
            else:
                return visitor.visitChildren(self)




    def mathmacro(self):

        localctx = LaTeXParser.MathmacroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_mathmacro)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(LaTeXParser.MATH_MACRO)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LaTeXParser.MATH_ARG_BEGIN:
                self.state = 90
                self.match(LaTeXParser.MATH_ARG_BEGIN)
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LaTeXParser.MACRO) | (1 << LaTeXParser.COMMENT) | (1 << LaTeXParser.PUNC) | (1 << LaTeXParser.MATH_ENV_BEGIN) | (1 << LaTeXParser.MATH_LEFT) | (1 << LaTeXParser.MATH_MACRO) | (1 << LaTeXParser.MATH_VARIABLE) | (1 << LaTeXParser.MATH_SCRIPT) | (1 << LaTeXParser.MATH_BINARY_OPERATOR) | (1 << LaTeXParser.MATH_UNARY_OPERATOR) | (1 << LaTeXParser.MATH_SUBEXPR_BEGIN) | (1 << LaTeXParser.MATH_AMPERSAND))) != 0):
                    self.state = 91
                    self.mathcontent()


                self.state = 94
                self.match(LaTeXParser.MATH_ARG_END)
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MathscriptContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MATH_SCRIPT(self):
            return self.getToken(LaTeXParser.MATH_SCRIPT, 0)

        def mathmacro(self):
            return self.getTypedRuleContext(LaTeXParser.MathmacroContext,0)


        def MATH_VARIABLE(self):
            return self.getToken(LaTeXParser.MATH_VARIABLE, 0)

        def MATH_ARG_BEGIN(self):
            return self.getToken(LaTeXParser.MATH_ARG_BEGIN, 0)

        def mathcontent(self):
            return self.getTypedRuleContext(LaTeXParser.MathcontentContext,0)


        def MATH_ARG_END(self):
            return self.getToken(LaTeXParser.MATH_ARG_END, 0)

        def getRuleIndex(self):
            return LaTeXParser.RULE_mathscript

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMathscript" ):
                listener.enterMathscript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMathscript" ):
                listener.exitMathscript(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMathscript" ):
                return visitor.visitMathscript(self)
            else:
                return visitor.visitChildren(self)




    def mathscript(self):

        localctx = LaTeXParser.MathscriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_mathscript)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(LaTeXParser.MATH_SCRIPT)
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LaTeXParser.MATH_MACRO]:
                self.state = 101
                self.mathmacro()
                pass
            elif token in [LaTeXParser.MATH_VARIABLE]:
                self.state = 102
                self.match(LaTeXParser.MATH_VARIABLE)
                pass
            elif token in [LaTeXParser.MATH_ARG_BEGIN]:
                self.state = 103
                self.match(LaTeXParser.MATH_ARG_BEGIN)
                self.state = 104
                self.mathcontent()
                self.state = 105
                self.match(LaTeXParser.MATH_ARG_END)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MathcontentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LaTeXParser.CommentContext)
            else:
                return self.getTypedRuleContext(LaTeXParser.CommentContext,i)


        def macro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LaTeXParser.MacroContext)
            else:
                return self.getTypedRuleContext(LaTeXParser.MacroContext,i)


        def mathmacro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LaTeXParser.MathmacroContext)
            else:
                return self.getTypedRuleContext(LaTeXParser.MathmacroContext,i)


        def mathscript(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LaTeXParser.MathscriptContext)
            else:
                return self.getTypedRuleContext(LaTeXParser.MathscriptContext,i)


        def mathenv(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LaTeXParser.MathenvContext)
            else:
                return self.getTypedRuleContext(LaTeXParser.MathenvContext,i)


        def MATH_VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(LaTeXParser.MATH_VARIABLE)
            else:
                return self.getToken(LaTeXParser.MATH_VARIABLE, i)

        def MATH_BINARY_OPERATOR(self, i:int=None):
            if i is None:
                return self.getTokens(LaTeXParser.MATH_BINARY_OPERATOR)
            else:
                return self.getToken(LaTeXParser.MATH_BINARY_OPERATOR, i)

        def MATH_UNARY_OPERATOR(self, i:int=None):
            if i is None:
                return self.getTokens(LaTeXParser.MATH_UNARY_OPERATOR)
            else:
                return self.getToken(LaTeXParser.MATH_UNARY_OPERATOR, i)

        def PUNC(self, i:int=None):
            if i is None:
                return self.getTokens(LaTeXParser.PUNC)
            else:
                return self.getToken(LaTeXParser.PUNC, i)

        def MATH_AMPERSAND(self, i:int=None):
            if i is None:
                return self.getTokens(LaTeXParser.MATH_AMPERSAND)
            else:
                return self.getToken(LaTeXParser.MATH_AMPERSAND, i)

        def MATH_SUBEXPR_BEGIN(self, i:int=None):
            if i is None:
                return self.getTokens(LaTeXParser.MATH_SUBEXPR_BEGIN)
            else:
                return self.getToken(LaTeXParser.MATH_SUBEXPR_BEGIN, i)

        def MATH_SUBEXPR_END(self, i:int=None):
            if i is None:
                return self.getTokens(LaTeXParser.MATH_SUBEXPR_END)
            else:
                return self.getToken(LaTeXParser.MATH_SUBEXPR_END, i)

        def MATH_LEFT(self, i:int=None):
            if i is None:
                return self.getTokens(LaTeXParser.MATH_LEFT)
            else:
                return self.getToken(LaTeXParser.MATH_LEFT, i)

        def MATH_RIGHT(self, i:int=None):
            if i is None:
                return self.getTokens(LaTeXParser.MATH_RIGHT)
            else:
                return self.getToken(LaTeXParser.MATH_RIGHT, i)

        def mathcontent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LaTeXParser.MathcontentContext)
            else:
                return self.getTypedRuleContext(LaTeXParser.MathcontentContext,i)


        def getRuleIndex(self):
            return LaTeXParser.RULE_mathcontent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMathcontent" ):
                listener.enterMathcontent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMathcontent" ):
                listener.exitMathcontent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMathcontent" ):
                return visitor.visitMathcontent(self)
            else:
                return visitor.visitChildren(self)




    def mathcontent(self):
